k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: ghcr.io/vinitkarlekar/wisecow_deploy_k8s/wisecow:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4499
          livenessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 4499
            initialDelaySeconds: 3
            periodSeconds: 5
