k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # if using cert-manager uncomment this line below and configure cluster-issuer
    # cert-manager.io/cluster-issuer: "letsencrypt" 
spec:
  tls:
    - hosts:
        - wisecow.local
      secretName: wisecow-tls
  rules:
    - host: wisecow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow
                port:
                  number: 80
